Added GitHub button.

--- a/tinker.html
+++ b/tinker.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.9/codemirror.css">
   <link rel="stylesheet" href="tinker.css">
   <link rel="icon" type="image/x-icon" href="https://www.swi-prolog.org/download/logo/swipl-64x64.ico">
+  <script crossorigin="anonymous" async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
 <body>
 
@@ -31,7 +32,10 @@
     <a href="https://webassembly.org/" target="_blank">WASM</a></div>
   <div>Beta version.
   See <a href="https://swi-prolog.discourse.group/t/swi-prolog-in-the-browser-using-wasm"
-  target="_blank">Wiki on Discourse</a> for status and usage</div>
+	 target="_blank">Wiki on Discourse</a> for status and usage</div>
+<div class="github-buttons">
+  <a class="github-button" href="https://github.com/SWI-Prolog/tinker" data-color-scheme="no-preference: light; light: light; dark: dark;" data-size="large" data-show-count="true" aria-label="Star SWI-Prolog/tinker on GitHub">Star</a>
+</div>
 </div>
 <div class="content">
   <div id="left">
