Organize tinker.js in classes

--- a/tinker.html
+++ b/tinker.html
@@ -136,7 +136,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"></script>
 
 <!-- Glue it all together -->
-<script src="tinker.js"></script>
+<script type="module" src="tinker.js"></script>
 
 </body>
 </html>
