Remove more ids

--- a/tinker.html
+++ b/tinker.html
@@ -41,8 +41,8 @@
   <div id="left">
     <div class="scroll-wrapper">
       <span class="scroll-start-at-top"></span>
-      <div class="console" id="console">
-	<div id="output">
+      <div class="console">
+	<div class="output">
 	</div>
       </div>
     </div>
