--- a/tinker.html
+++ b/tinker.html
@@ -99,7 +99,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"></script>
 
 <!-- Glue it all together -->
-<script type="module" src="tinker.js"></script>
+<script type="module">
+  import * as tinker from "./tinker.js";
+  window.tinker = tinker;
+</script>
+
 <script>
   // Some global functions that can be used to demonstrate calling
   // JavaScript
