--- a/tinker.html
+++ b/tinker.html
@@ -39,71 +39,34 @@
 </div>
 <div class="content">
   <div id="left">
-    <div class="scroll-wrapper">
-      <span class="scroll-start-at-top"></span>
-      <div class="console" id="console">
-	<div id="output">
-	</div>
-	<div id="more">
-	  <button id="more.next" onclick="reply_more('redo')">Next</button>
-	  <button id="more.cont" onclick="reply_more('continue')">Stop</button>
-	</div>
-	<div id="trace">
-	  <button id="trace.creep"
-		  title="Creep (c,Space,Enter)"
-		  onclick="reply_trace('creep')">↳</button>
-	  <button id="trace.skip"
-		  title="Skip (s)"
-		  onclick="reply_trace('skip')">⏭</button>
-	  <button id="trace.retry"
-		  title="Retry (r)"
-		  onclick="reply_trace('retry')">↻</button>
-	  <button id="trace.nodebug"
-		  title="Nodebug (n)"
-		  onclick="reply_trace('nodebug')">▶</button>
-	  <button id="trace.abort"
-		  title="Abort (a)"
-		  onclick="reply_trace('abort')">⏹</button>
-	</div>
-	<div id="input">
-	  <span class="prompt">?- </span><input type="text" name="query"
-						autocapitalize="none"
-						autocomplete="off">
-	</div>
-	<form class="abort" id="abort">
-	  <button>Abort</button>
-	</form>
-	<div tabindex="0" id="keyboard">
-	  ⌨️ <span>waiting for a key</span>
-	</div>
-      </div>
+    <div class="tinker-console">
     </div>
   </div>
 
-  <div class="editor-container" id="right">
-    <form id="editor">
-      <div id="editor-files">
-      <select id="select-file">
-      </select>
-      <button id="delete-file">&#128465;</button>
-      <button id="new-file">+</button>
-      <span id="create-file">
-        <input type="text" id="file-name" placeholder="File name">
-        <button id="create-button">Create</button>
-      </span>
+  <div id="right">
+    <div class="tinker-source">
+      <div class="source-files">
+	<select name="select-file">
+	</select>
+	<button name="delete-file">&#128465;</button>
+	<button name="new-file">+</button>
+	<span class="create-file">
+          <input type="text" name="file-name" placeholder="File name">
+          <button name="create-button">Create</button>
+	</span>
       </div>
       <div class="editor-wrapper">
-      <div id="file"></div> <!-- Filled with CodeMirror -->
+	<div name="editor"></div> <!-- Filled with CodeMirror -->
       </div>
-      <div class="editor-buttons">
-	<button>(Re)consult</button>
+      <div class="source-buttons">
+	<button name="consult">(Re)consult</button>
 	<span class="exch-files">
 	  <input type="file" accept=".pl" multiple class="upload-file">
 	  <a class="btn upload" href="#" title="Upload files">📤</a>
 	  <a class="btn download" type="text/x-prolog">&#x1F4E5;</a>
 	</span>
       </div>
-    </form>
+    </div>
   </div>
 </div>
 
@@ -111,7 +74,7 @@
 <!-- Use swipl-bundle.js or swipl-web.js.  The bundle is easier to
      distribute while web is better for local use with e.g., Emscripten
      tools such as --profiling -->
-<script src="/wasm/swipl-bundle.js"></script>
+<script src="/wasm/swipl-web.js"></script>
 
 <!-- Splitter from https://split.js.org Requires #content to be flex.-->
 <script src="https://www.swi-prolog.org/download/web/split-1.6.5/split.min.js"></script>
@@ -136,7 +99,52 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"></script>
 
 <!-- Glue it all together -->
-<script src="tinker.js"></script>
+<script type="module">
+  import * as tinker from "./tinker.js";
+  window.tinker = tinker;
+
+  let Prolog;
+  let Module;
+  var options = {
+    arguments: ['-g', 'true'],
+    locateFile: function(file) { // not needed with swipl-bundle.js
+      return '/wasm/' + file;
+    },
+    on_output: print_output
+  };
+
+  function print_output(line, cls, sgr) {
+    Prolog.console.print(line, cls, sgr);
+  }
+
+  SWIPL(options).then(async (module) => {
+    Module = module;
+    window.prolog = Prolog = Module.prolog;
+    await Prolog.load_scripts();
+    new tinker.Tinker({ root:document.querySelector("div.content"),
+			module:module,
+			banner:true
+		      });
+  });
+
+</script>
+
+<script>
+  // Some global functions that can be used to demonstrate calling
+  // JavaScript
+
+  // Use as `?- X := add_one(1)`
+  add_one = (n) => n+1;
+  
+  // Use as `?- await promise_any(42)`
+  promise_any = (data) => {
+    console.log(data);
+    
+    return new Promise(function(resolve, reject) {
+      resolve(data);
+    });
+  }
+</script>
 
 </body>
 </html>
