--- a/tinker.html
+++ b/tinker.html
@@ -74,7 +74,7 @@
 <!-- Use swipl-bundle.js or swipl-web.js.  The bundle is easier to
      distribute while web is better for local use with e.g., Emscripten
      tools such as --profiling -->
-<script src="/wasm/swipl-web.js"></script>
+<script src="/wasm/swipl-bundle.js"></script>
 
 <!-- Splitter from https://split.js.org Requires #content to be flex.-->
 <script src="https://www.swi-prolog.org/download/web/split-1.6.5/split.min.js"></script>
