Start supporting highlighting

--- a/tinker.html
+++ b/tinker.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.9/codemirror.css">
   <link rel="stylesheet" href="tinker.css">
   <link rel="stylesheet" href="term.css">
+  <link rel="stylesheet" href="source.css">
   <link rel="icon" type="image/x-icon" href="https://www.swi-prolog.org/download/logo/swipl-64x64.ico">
   <script crossorigin="anonymous" async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
